# omim

./: .gitmodules  CMakeLists.txt  README.md  build_geocore.sh  configure.sh  coverage.sh  defines.hpp  omim_config.h  private_default.h
.github/workflows/: ccpp.yml
3party/agg/: CMakeLists.txt
3party/bsdiff-courgette/bsdiff/bsdiff_tests/: CMakeLists.txt
3party/freetype/: CMakeLists.txt
3party/gflags/: CMakeLists.txt
3party/icu/: CMakeLists.txt
3party/minizip/: CMakeLists.txt
3party/protobuf/: CMakeLists.txt
base/: CMakeLists.txt  base.hpp  buffer_vector.hpp  file_name_utils.cpp  get_time.hpp  macros.hpp  stl_helpers.hpp  string_utils.cpp  thread.hpp  timer.cpp  visitor.hpp
base/base_tests/: CMakeLists.txt  buffer_vector_test.cpp  file_name_utils_tests.cpp  levenshtein_dfa_test.cpp  math_test.cpp  newtype_test.cpp  url_helpers_tests.cpp
cmake/: OmimHelpers.cmake
coding/: CMakeLists.txt  fixed_bits_ddvector.hpp  mmap_reader.cpp  sha1.cpp
coding/coding_tests/: CMakeLists.txt
coding/internal/: file64_api.hpp  file_data.cpp  file_data.hpp
descriptions/descriptions_tests/: CMakeLists.txt
docs/: CONTRIBUTING.md  CPP_STYLE.md
drape/: texture_manager.cpp
drape_frontend/: backend_renderer.cpp  frontend_renderer.cpp
editor/: CMakeLists.txt  osm_editor.cpp
editor/editor_tests/: CMakeLists.txt
editor/osm_auth_tests/: CMakeLists.txt
generator/: CMakeLists.txt  data_version.cpp  feature_processing_layers.cpp  feature_processing_layers.hpp  filter_world.cpp  language_detector.cpp  language_detector.hpp  osm_o5m_source.hpp  processor_factory.hpp  processor_world.cpp  processor_world.hpp  world_map_generator.hpp
generator/booking_quality_check/: CMakeLists.txt
generator/extract_addr/: CMakeLists.txt
generator/feature_segments_checker/: CMakeLists.txt
generator/generator_integration_tests/: CMakeLists.txt  features_tests.cpp
generator/generator_tests/: CMakeLists.txt  geo_objects_tests.cpp  language_detector_test.cpp  metadata_parser_test.cpp  regions_tests.cpp
generator/generator_tests_support/: CMakeLists.txt
generator/generator_tool/: CMakeLists.txt  generator_tool.cpp
generator/mwm_diff/mwm_diff_tests/: CMakeLists.txt
generator/mwm_diff/pymwm_diff/: CMakeLists.txt
generator/regions/: collector_region_info.cpp  country_specifier.cpp  locality_point_integrator.cpp  regions.cpp  regions_builder.cpp
generator/regions/specs/: ukraine.inl
generator/srtm_coverage_checker/: CMakeLists.txt
geocoder/: CMakeLists.txt  geocoder.cpp  geocoder.hpp  hierarchy.cpp  hierarchy.hpp  house_numbers_matcher.cpp  index.hpp  name_dictionary.hpp
geocoder/geocoder_cli/: CMakeLists.txt  geocoder_cli.cpp
geocoder/geocoder_tests/: CMakeLists.txt  geocoder_tests.cpp
geometry/: CMakeLists.txt
geometry/geometry_tests/: CMakeLists.txt  mercator_test.cpp  spline_test.cpp
indexer/: CMakeLists.txt  displacement_manager.hpp  drawing_rules.hpp  feature.cpp  feature_meta.cpp
indexer/indexer_tests/: CMakeLists.txt  feature_metadata_test.cpp
kml/kml_tests/: CMakeLists.txt
kml/pykmlib/: CMakeLists.txt
map/: CMakeLists.txt  bookmark_catalog.cpp  feature_vec_model.cpp  feature_vec_model.hpp
map/style_tests/: CMakeLists.txt
openlr/: CMakeLists.txt
platform/: CMakeLists.txt  file_logging.cpp  file_logging.hpp  get_text_by_id.cpp  http_request.cpp  http_thread_apple.h  http_thread_apple.mm  http_user_agent.cpp  platform.cpp  platform.hpp  platform_ios.mm  platform_linux.cpp  platform_mac.mm  platform_std.cpp  platform_unix_impl.cpp  preferred_languages.cpp  settings.cpp
platform/platform_tests/: CMakeLists.txt  platform_test.cpp
platform/platform_tests_support/: CMakeLists.txt
routing/: routing_session.cpp  speed_camera_manager.cpp
routing/routing_benchmarks/: CMakeLists.txt
routing/routing_consistency_tests/: CMakeLists.txt
routing/routing_integration_tests/: CMakeLists.txt  routing_test_tools.cpp  routing_test_tools.hpp
routing/routing_quality/: CMakeLists.txt
routing/routing_quality/routing_quality_tests/: CMakeLists.txt
routing/routing_quality/routing_quality_tool/: CMakeLists.txt
routing/routing_tests/: CMakeLists.txt
routing_common/routing_common_tests/: CMakeLists.txt
search/: CMakeLists.txt  downloader_search_callback.cpp  features_layer_matcher.cpp  intermediate_result.hpp  mwm_context.cpp  mwm_context.hpp  pre_ranker.cpp  pre_ranking_info.cpp  pre_ranking_info.hpp  processor.cpp  ranker.cpp  ranking_info.cpp  ranking_info.hpp  result.hpp  retrieval.cpp  reverse_geocoder.cpp
search/pysearch/: CMakeLists.txt
search/search_integration_tests/: CMakeLists.txt
search/search_quality/: CMakeLists.txt
search/search_quality/booking_dataset_generator/: CMakeLists.txt
search/search_quality/features_collector_tool/: CMakeLists.txt
search/search_quality/samples_generation_tool/: CMakeLists.txt
search/search_quality/search_quality_tests/: CMakeLists.txt
search/search_quality/search_quality_tool/: CMakeLists.txt
search/search_tests/: CMakeLists.txt
std/: algorithm.hpp  target_os.hpp  unordered_map.hpp
storage/: CMakeLists.txt  country_info_getter.cpp  pinger.cpp  storage.cpp
storage/diff_scheme/: diff_manager.cpp  diff_scheme_checker.cpp
testing/: benchmark.hpp  path.hpp.in  testing.hpp  testingmain.cpp
tools/unix/: build_omim.sh
traffic/: traffic_info.cpp
traffic/pytraffic/: CMakeLists.txt
traffic/traffic_tests/: CMakeLists.txt
transit/transit_tests/: CMakeLists.txt
ugc/: storage.cpp
ugc/ugc_tests/: CMakeLists.txt
xcode/tess2/tess2.xcodeproj/: project.pbxproj
